--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 <link rel="icon" type="ico" href="unnamed.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenido a Stori</title>
+    <title>Bienvenido a Falabella</title>
     <style>
         /* Estilos básicos */
         body {
